[package]
name = "xenon-webdriver"
version = "0.5.0"
authors = ["Steve Pryde <steve@stevepryde.com>"]
edition = "2021"
license = "MIT"
description = "Xenon is a WebDriver proxy similar to Selenium Server"
homepage = "https://github.com/stevepryde/xenon"
repository = "https://github.com/stevepryde/xenon"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "process"] }
log = "0.4"
thiserror = "1.0"
uuid = { version = "1.1", features = ["v4"] }
hyper = { version = "0.14", features = ["full"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.1"
serde_yaml = "0.8"
chrono = "0.4"
indexmap = "1.9"
env_logger = "0.9"
structopt = "0.3"
